--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -171,35 +171,31 @@
 							<a href="index.html">
 								<i class="la la-dashboard"></i>
 								<p>Dashboard</p>
-								<span class="badge badge-count">5</span>
+								
 							</a>
 						</li>
 						<li class="nav-item">
-							<a href="components.html">
+							<a href="{% url 'organization-list' %}">
 								<i class="la la-table"></i>
-								<p>Components</p>
-								<span class="badge badge-count">14</span>
+								<p>Organization</p>
 							</a>
 						</li>
 						<li class="nav-item">
 							<a href="forms.html">
 								<i class="la la-keyboard-o"></i>
-								<p>Forms</p>
-								<span class="badge badge-count">50</span>
+								<p>Org. Members</p>
 							</a>
 						</li>
 						<li class="nav-item">
 							<a href="tables.html">
 								<i class="la la-th"></i>
-								<p>Tables</p>
-								<span class="badge badge-count">6</span>
+								<p>Student</p>
 							</a>
 						</li>
 						<li class="nav-item">
 							<a href="notifications.html">
 								<i class="la la-bell"></i>
-								<p>Notifications</p>
-								<span class="badge badge-success">3</span>
+								<p>College</p>
 							</a>
 						</li>
 						<li class="nav-item active">
@@ -209,24 +205,38 @@
 								<span class="badge badge-danger">25</span>
 							</a>
 						</li>
-						<li class="nav-item">
-							<a href="icons.html">
-								<i class="la la-fonticons"></i>
-								<p>Icons</p>
-							</a>
-						</li>
-						<li class="nav-item update-pro">
-							<button  data-toggle="modal" data-target="#modalUpdate">
-								<i class="la la-hand-pointer-o"></i>
-								<p>Update To Pro</p>
-							</button>
-						</li>
 					</ul>
 				</div>
 			</div>
 			<div class="main-panel">
 				{% block content %}
                 {% endblock %}
+				<footer class="footer">
+					<div class="container-fluid">
+						<nav class="pull-left">
+							<ul class="nav">
+								<li class="nav-item">
+									<a class="nav-link" href="http://www.themekita.com">
+										ThemeKita
+									</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="#">
+										Help
+									</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="https://themewagon.com/license/#free-item">
+										Licenses
+									</a>
+								</li>
+							</ul>
+						</nav>
+						<div class="copyright ml-auto">
+							2018, made with <i class="la la-heart heart text-danger"></i> by <a href="http://www.themekita.com">ThemeKita</a>
+						</div>				
+					</div>
+				</footer>
 			</div>
 		</div>
 	</div>
